--- a/SOSExamples.xcodeproj/xcshareddata/xcschemes/3. Customize (Advanced).xcscheme
+++ b/SOSExamples.xcodeproj/xcshareddata/xcschemes/3. Customize (Advanced).xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "F2F0D7D01982984F00B14C39"
-               BuildableName = "1. Integrate SOS copy.app"
+               BuildableName = "3. Customize (Advanced).app"
                BlueprintName = "3. Customize (Advanced)"
                ReferencedContainer = "container:SOSExamples.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F2F0D7D01982984F00B14C39"
-            BuildableName = "1. Integrate SOS copy.app"
+            BuildableName = "3. Customize (Advanced).app"
             BlueprintName = "3. Customize (Advanced)"
             ReferencedContainer = "container:SOSExamples.xcodeproj">
          </BuildableReference>
@@ -52,7 +52,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F2F0D7D01982984F00B14C39"
-            BuildableName = "1. Integrate SOS copy.app"
+            BuildableName = "3. Customize (Advanced).app"
             BlueprintName = "3. Customize (Advanced)"
             ReferencedContainer = "container:SOSExamples.xcodeproj">
          </BuildableReference>
@@ -70,7 +70,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F2F0D7D01982984F00B14C39"
-            BuildableName = "1. Integrate SOS copy.app"
+            BuildableName = "3. Customize (Advanced).app"
             BlueprintName = "3. Customize (Advanced)"
             ReferencedContainer = "container:SOSExamples.xcodeproj">
          </BuildableReference>
